[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mleiirepo"
version = "0.0.1"
description = "Repositorio del curso II de Machine Learning de DSR Peru"
authors = [
  { name = "Marquinhos9873" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "==3.11.13"


[tool.ruff]
line-length = 99
src = ["mleiirepo"]
include = ["pyproject.toml", "mleiirepo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mleiirepo"]
force-sort-within-sections = true

